<resources>
    <string name="app_name">Smoosh</string>
    <string name="background_text">Background Text</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and">Find a Team In Your City and</string>
    <string name="dominate_the_league">Dominate The League</string>
    <string name="backgornd_image">Backgornd Image</string>
    <string name="app_logo">App Logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="get_started">Get Started</string>
    <string name="co_ed">CO-ED</string>
    <string name="womens">WOMENS</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="next">NEXT</string>
    <string name="search_league">Looking for a co-ed beginner league for you ...</string>
</resources>